Fix the scrollbar

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -23,20 +23,26 @@ a:hover { text-decoration: none; }
 .tm-header {
     background-color: #0CC;
     color: white;
-    padding: 30px;
+    
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     z-index: 100;
     width: 400px;
-    overflow-x: visible;
-    overflow-y: scroll; 
-    scrollbar-width: none;
-    -ms-overflow-style: none;   
+    overflow-y: visible;     
 }
 
-.tm-header::-webkit-scrollbar {
+.tm-header-wrapper {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    padding: 30px;
+    width: 100%;
+    height: 100%; 
+}
+
+.tm-header-wrapper::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
@@ -328,13 +334,16 @@ button:focus { outline: none; }
 @media (max-width: 991px) {
     .tm-header {
         width: 320px;
-        left: -320px;
-        padding: 15px;
+        left: -320px;        
         transition: all 0.3s ease;
     }
 
     .tm-header.show {
         left: 0;
+    }
+
+    .tm-header-wrapper {
+        padding: 15px;
     }
 
     .navbar-toggler {
